postgres-deployment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: hw5
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:10.13-alpine
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-pvc
          mountPath: "/var/lib/postgresql/data/:Z"
      volumes:
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-pvc1
