postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: hw5
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
