ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geekbrains
spec:
  rules:
    - host: HOST
      http:
       paths:
       - path: PATH
         pathType: Prefix
         backend:
           service:
             name: geekbrains
             port:
               number: 8000
